# sb

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: method.md
sb_mnist/: __init__.py  bridge.py  config.py  data.py  models.py  sampler.py  sinkhorn.py  trainer.py  utils.py
scripts/: sample.py  train.py
tests/: test_bridge_model.py  test_sinkhorn.py
