[project]
name = "schrodinger-bridge-mnist"
version = "0.1.0"
description = "A compact PyTorch Schrodinger bridge project for transporting MNIST digit 2 to digit 8."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.2",
  "torchvision>=0.17",
  "numpy>=1.24",
  "tqdm>=4.66",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

